[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/Ground.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://ARCADE_N.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Sounds/Duck.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Goose Laugh.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 10
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 8
outline_size = 1
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 88, 160 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 200, 340 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="DucksAndGooses" type="YSort" parent="."]

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 4

[node name="Points" type="Label" parent="UI"]
margin_left = 8.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -176.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="UI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 96.0
margin_bottom = -176.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="UI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 96.0
margin_bottom = -128.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Highscore: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewHighscore" type="Label" parent="UI/GameOver"]
visible = false
modulate = Color( 1, 0.607843, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
margin_bottom = -128.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "New Highscore!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 96.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click to play again."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Duck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="GooseLaughing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
